# GpxTrackPoster

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yaml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  codeql.yml  main.yml
docs/: gen_ref_pages.py  index.md
examples/: examples.sh
gpxtrackposter/: __init__.py  calendar_drawer.py  circular_drawer.py  cli.py  clock_drawer.py  exceptions.py  github_drawer.py  grid_drawer.py  heatmap_drawer.py  localization.py  poster.py  quantity_range.py  timezone_adjuster.py  track.py  track_loader.py  tracks_drawer.py  units.py  utils.py  value_range.py  xy.py  year_range.py
locale/: gpxposter.pot
locale/de_DE/LC_MESSAGES/: gpxposter.po
locale/fi_FI/LC_MESSAGES/: gpxposter.po
locale/fr_FR/LC_MESSAGES/: gpxposter.po
locale/ru_RU/LC_MESSAGES/: gpxposter.po
locale/zh_CN/LC_MESSAGES/: gpxposter.mo  gpxposter.po
scripts/: bump_year.py  check_copyright.py  fit2gpx.sh  update_readme.py
tests/: __init__.py  conftest.py  test_calendar_drawer.py  test_circular_drawer.py  test_cli.py  test_github_drawer.py  test_grid_drawer.py  test_heatmap_drawer.py  test_localization.py  test_quantity_range.py  test_timezone_adjuster.py  test_track.py  test_track_loader.py  test_utils.py  test_value_range.py  test_xy.py  test_year_range.py
